# kaggle-image-matching-challenge-2025

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  config.yml  data.sh  docker-compose.yml  kaggle.json  pyproject.toml  setup_dataset.sh  test_inference.py  train.sh
.github/workflows/: pre-commit.yaml
docker/: DOCKER.md  Dockerfile  data.sh
image_matching_challenge_2025/: __init__.py  dataset.py  experiment.yaml  functions.py  inference.py  models.py  train.py  trainer.py
src/: README.md  __init__.py  dataset.py  evaluation.py  inference.py  inference.py.bak  loss.py  models.py  train.py  trainer.py
src/models/: README.md  __init__.py  base.py  dino.py  loftr.py  superglue.py  utils.py
src_v2/: __init__.py  augmentation.py  clustering.py  ensemble.py  evaluation.py  inference.py  metric_learning.py  models.py  outlier_detection.py  pose_estimation.py  submission.py  train.py  trainer.py
